--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -175,7 +175,11 @@
     <div class="writeup-layout">
         <main class="writeup-content">
             <div style="margin-bottom: 30px; border-bottom: 1px dashed #333; padding-bottom: 20px;">
-                <a href="/courses/" style="color: #888; text-decoration: none; font-size: 0.8rem; display: block; margin-bottom: 10px;">&lt;&lt; BACK_TO_MODULES</a>
+                <div style="margin-bottom: 20px;">
+                <a href="/courses/" class="btn-cyber" style="font-size: 0.7rem; padding: 10px 25px;">
+                    &lt;&lt; BACK_TO_MODULES
+                    </a>
+                </div>
                 <h1 style="margin: 0;">{{ page.title }}</h1>
                 <div style="margin-top: 10px; color: #888; font-family: monospace;">
                     <span>DATE: {{ page.date | date: "%Y-%m-%d" }}</span> | 
