--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -175,9 +175,9 @@
     <div class="writeup-layout">
         <main class="writeup-content">
             <div style="margin-bottom: 30px; border-bottom: 1px dashed #333; padding-bottom: 20px;">
-                <div style="margin-bottom: 20px;">
-                <a href="/courses/" class="btn-cyber" style="font-size: 0.7rem; padding: 10px 25px;">
-                    &lt;&lt; BACK_TO_MODULES
+                <div style="margin-bottom: 30px;">
+                    <a href="/courses/" class="btn-cyber secondary" style="font-size: 0.7rem; padding: 10px 25px; display: inline-block;">
+                        &lt;&lt; BACK_TO_MODULES
                     </a>
                 </div>
                 <h1 style="margin: 0;">{{ page.title }}</h1>
