--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -143,10 +143,10 @@
 <body>
     <div class="container" style="padding-top: 2px; padding-bottom: 2px;">
         <header>
-            <a href="https://kaiversus.github.io/" class="logo" style="text-decoration: none;">KAIVERSUS<span style="color: var(--course-accent);">.EDU</span></a>
+            <a href="https://kaiversus.github.io/" class="logo" style="text-decoration: none;">KAIVERSUS BLOG</a>
             <nav>
                 <a href="/">Homepage</a>
-                <a href="/courses/">Courses_List</a> 
+                <a href="/about/">About_me</a> 
                 <a href="https://kaiversus.github.io/#writeups">Repository</a>
             </nav>
         </header>
