--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -163,6 +163,7 @@
                     <span style="color: var(--course-accent);">LEVEL: {{ page.difficulty | default: "All Levels" }}</span> |
                     <span>AUTHOR: {{ page.author | default: "Kaiversus" }}</span>
                 </div>
+                <a href="/" class="btn-cyber secondary" style="font-size: 0.8rem;"><< BACK_TO_ROOT</a>
             </div>
             
             {{ content }}
