--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -150,9 +150,10 @@
                 <a href="https://kaiversus.github.io/#writeups">Repository</a>
             </nav>
         </header>
-        <a href="/" class="btn-cyber secondary" style="font-size: 0.8rem;"><< BACK_TO_ROOT</a>
     </div>
-
+    <div class="back-nav" onclick="closeCourse()">
+    <span>&lt;&lt; CD .. (RETURN)</span>
+    </div>
     <div class="course-layout">
         <main class="course-content">
             <div style="margin-bottom: 30px; border-bottom: 1px dashed #333; padding-bottom: 20px;">
