--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,21 @@
 
     {% if page.collection %}
         <main class="container writeup-content" style="padding-top: 40px; min-height: 60vh;">
+            {% if page.collection == 'courses' %}
+    <div class="container" style="margin-top: 40px; margin-bottom: -30px;">
+        <a href="/courses/" style="
+            color: #ffaa00; 
+            font-family: 'Courier New', monospace; 
+            text-decoration: none; 
+            font-size: 0.9rem; 
+            opacity: 0.7;
+            transition: 0.3s;
+        " onmouseover="this.style.opacity='1'; this.style.letterSpacing='1px'" onmouseout="this.style.opacity='0.7'; this.style.letterSpacing='0'">
+            [ Users:~$ cd course ]
+        </a>
+    </div>
+    {% endif %}
+    {{ content }}
             {{ content }}
         </main>
     {% else %}
